Improve QG